<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="68dp"
        android:background="#94BB86FC"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:hint="@string/password"
        android:ems="10"
        android:background="#94BB86FC"
        android:inputType="textPassword"
        android:autofillHints="False"
        android:drawableStart="@drawable/baseline_info_24"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_login_username"
        app:layout_constraintStart_toStartOf="@+id/txt_login_username"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_username"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_password" />


</androidx.constraintlayout.widget.ConstraintLayout>
